fixed uploading of pictures, creating of article, disqus comment form shifter down

--- a/homework-django/mysite/static/css/mysite.css
+++ b/homework-django/mysite/static/css/mysite.css
@@ -73,3 +73,14 @@ button {
     margin: 10 auto;
     display: block;
 }
+
+
+.footer {
+   position: fixed;
+   left: 0;
+   bottom: 0;
+   width: 100%;
+   background-color: red;
+   color: white;
+   text-align: center;
+}
